--- a/public/index.html
+++ b/public/index.html
@@ -348,6 +348,14 @@
             <h1><i class="fas fa-futbol"></i> IoT Ball Detection System</h1>
             <p>Sistem Deteksi Bola Berbasis IoT</p>
         </div>
+        <div class="ball-types-info"
+            style="background:rgba(255,255,255,0.15);border-radius:12px;padding:18px 20px;margin-bottom:24px;text-align:center;color:#fff;font-size:1.1rem;">
+            <b>🎯 Jenis Bola yang Bisa Dideteksi (6 Macam)</b><br>
+            <span style="font-size:1.3rem;">
+                ⚾ Baseball &nbsp;•&nbsp; 🏀 Basket &nbsp;•&nbsp; ⚽ Sepak Bola &nbsp;•&nbsp; 🏌️ Golf &nbsp;•&nbsp; 🎾
+                Tenis &nbsp;•&nbsp; 🏐 Voli
+            </span>
+        </div>
 
         <!-- Segmented Control -->
         <div class="segmented-control" id="modeControl">
