--- a/public/index.html
+++ b/public/index.html
@@ -454,6 +454,11 @@
 
     <!-- Status Message -->
     <div class="status" id="statusMessage"></div>
+    <footer
+        style="margin-top:40px;text-align:center;padding:18px 0 12px 0;background:rgba(255,255,255,0.10);color:#fff;font-size:1.08rem;border-radius:0 0 16px 16px;">
+        <div style="margin-bottom:4px;">🎓 IoT Project: Smart Ball Detection System using Computer Vision</div>
+        <div>Made by: Alvin, Daffa, Abidzar, Ridho &bull; Powered by Roboflow AI &amp; Flask</div>
+    </footer>
 
     <script>
         // Elements
