--- a/public/index.html
+++ b/public/index.html
@@ -44,8 +44,8 @@
         }
 
         .main-content {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
+            display: flex;
+            flex-direction: column;
             gap: 30px;
             margin-bottom: 30px;
         }
@@ -56,6 +56,9 @@
             padding: 30px;
             box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
             transition: transform 0.3s ease;
+            max-width: 800px;
+            margin: 0 auto;
+            width: 100%;
         }
 
         .card:hover {
@@ -79,16 +82,38 @@
             cursor: pointer;
             transition: all 0.3s ease;
             margin-bottom: 20px;
+            background: linear-gradient(135deg, #f8f9ff 0%, #e8f2ff 100%);
+            position: relative;
         }
 
         .upload-area:hover {
             border-color: #667eea;
-            background-color: #f8f9ff;
+            background: linear-gradient(135deg, #f0f4ff 0%, #e0f0ff 100%);
+            transform: translateY(-2px);
+            box-shadow: 0 5px 15px rgba(102, 126, 234, 0.2);
         }
 
         .upload-area.dragover {
             border-color: #667eea;
-            background-color: #f0f4ff;
+            background: linear-gradient(135deg, #e0f0ff 0%, #d0e8ff 100%);
+            transform: scale(1.02);
+        }
+
+        .upload-area::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: linear-gradient(45deg, transparent 30%, rgba(102, 126, 234, 0.1) 50%, transparent 70%);
+            opacity: 0;
+            transition: opacity 0.3s ease;
+            pointer-events: none;
+        }
+
+        .upload-area:hover::before {
+            opacity: 1;
         }
 
         .upload-icon {
@@ -112,17 +137,41 @@
             font-weight: 600;
             transition: all 0.3s ease;
             margin: 5px;
+            box-shadow: 0 4px 12px rgba(102, 126, 234, 0.3);
+            position: relative;
+            overflow: hidden;
         }
 
         .btn:hover {
             transform: translateY(-2px);
-            box-shadow: 0 5px 15px rgba(102, 126, 234, 0.4);
+            box-shadow: 0 6px 20px rgba(102, 126, 234, 0.4);
+        }
+
+        .btn:active {
+            transform: translateY(0);
+            box-shadow: 0 2px 8px rgba(102, 126, 234, 0.3);
         }
 
         .btn:disabled {
             opacity: 0.6;
             cursor: not-allowed;
             transform: none;
+            box-shadow: none;
+        }
+
+        .btn::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.2), transparent);
+            transition: left 0.5s;
+        }
+
+        .btn:hover::before {
+            left: 100%;
         }
 
         .url-input {
@@ -311,7 +360,7 @@
 
         @media (max-width: 900px) {
             .main-content {
-                grid-template-columns: 1fr;
+                gap: 20px;
             }
 
             .segmented-control {
@@ -359,8 +408,8 @@
 
         <!-- Segmented Control -->
         <div class="segmented-control" id="modeControl">
-            <button class="seg-btn active" id="btnUploadMode"><i class="fas fa-upload"></i> Upload Gambar</button>
-            <button class="seg-btn" id="btnWebcamMode"><i class="fas fa-camera"></i> Face Cam</button>
+            <button class="seg-btn active" id="btnUploadMode"><i class="fas fa-upload"></i> Upload</button>
+            <button class="seg-btn" id="btnWebcamMode"><i class="fas fa-camera"></i> Kamera</button>
         </div>
 
         <div class="main-content" id="mainContent">
@@ -371,7 +420,12 @@
                     <div class="upload-icon">
                         <i class="fas fa-cloud-upload-alt"></i>
                     </div>
-                    <p>Drag & drop gambar di sini atau klik untuk memilih file</p>
+                    <p style="color: #666; font-size: 0.95rem;">Drag & drop gambar di sini atau <strong>klik area
+                            ini</strong> untuk memilih file</p>
+                    <div
+                        style="margin-top: 15px; padding: 8px 16px; background: rgba(102, 126, 234, 0.1); border-radius: 8px; display: inline-block;">
+                        <span style="color: #667eea; font-size: 0.9rem;">💡 Klik area ini untuk upload</span>
+                    </div>
                     <input type="file" id="fileInput" class="file-input" accept="image/*">
                 </div>
                 <button class="btn" id="detectBtn" disabled>
@@ -384,7 +438,7 @@
 
             <!-- Webcam Card -->
             <div class="card" id="webcamCard" style="display:none;">
-                <h2><i class="fas fa-camera"></i> Face Cam</h2>
+                <h2><i class="fas fa-camera"></i> Kamera</h2>
                 <div class="webcam-area" style="text-align:center;">
                     <video id="webcamVideo" autoplay playsinline
                         style="border-radius:12px;max-width:100%;box-shadow:0 2px 8px #0002;"></video>
@@ -398,18 +452,6 @@
                 </button>
                 <div class="preview-container" id="webcamPreviewContainer" style="display: none;">
                     <img id="webcamPreviewImage" class="preview-image">
-                </div>
-            </div>
-
-            <!-- URL Input Card (optional, bisa di-hide jika ingin lebih clean) -->
-            <div class="card" id="urlCard" style="display:none;">
-                <h2><i class="fas fa-link"></i> Deteksi dari URL</h2>
-                <input type="url" id="urlInput" class="url-input" placeholder="Masukkan URL gambar...">
-                <button class="btn" id="detectUrlBtn">
-                    <i class="fas fa-search"></i> Deteksi dari URL
-                </button>
-                <div class="preview-container" id="urlPreviewContainer" style="display: none;">
-                    <img id="urlPreviewImage" class="preview-image">
                 </div>
             </div>
         </div>
@@ -467,10 +509,6 @@
         const detectBtn = document.getElementById('detectBtn');
         const previewContainer = document.getElementById('previewContainer');
         const previewImage = document.getElementById('previewImage');
-        const urlInput = document.getElementById('urlInput');
-        const detectUrlBtn = document.getElementById('detectUrlBtn');
-        const urlPreviewContainer = document.getElementById('urlPreviewContainer');
-        const urlPreviewImage = document.getElementById('urlPreviewImage');
         const loading = document.getElementById('loading');
         const results = document.getElementById('results');
         const resultsContent = document.getElementById('resultsContent');
@@ -658,45 +696,6 @@
             }
         });
 
-        // Detect ball from URL
-        detectUrlBtn.addEventListener('click', async () => {
-            const imageUrl = urlInput.value.trim();
-            if (!imageUrl) {
-                showStatus('Masukkan URL gambar!', 'error');
-                return;
-            }
-
-            // Show preview
-            urlPreviewImage.src = imageUrl;
-            urlPreviewContainer.style.display = 'block';
-
-            loading.style.display = 'block';
-            results.style.display = 'none';
-
-            try {
-                const response = await fetch('/api/detect-ball-url', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify({ imageUrl })
-                });
-
-                const data = await response.json();
-
-                if (data.success) {
-                    displayResults(data);
-                    showStatus('Deteksi berhasil!', 'success');
-                } else {
-                    throw new Error(data.error);
-                }
-            } catch (error) {
-                showStatus('Gagal mendeteksi bola: ' + error.message, 'error');
-            } finally {
-                loading.style.display = 'none';
-            }
-        });
-
         // Display results
         function displayResults(data) {
             results.style.display = 'block';
@@ -705,8 +704,8 @@
             let imgSrc = '';
             if (previewImage && previewContainer.style.display !== 'none') {
                 imgSrc = previewImage.src;
-            } else if (urlPreviewImage && urlPreviewContainer.style.display !== 'none') {
-                imgSrc = urlPreviewImage.src;
+            } else if (webcamPreviewImage && webcamPreviewContainer.style.display !== 'none') {
+                imgSrc = webcamPreviewImage.src;
             }
             const resultImage = document.getElementById('resultImage');
             const resultCanvas = document.getElementById('resultCanvas');
